--- a/index.html
+++ b/index.html
@@ -156,5 +156,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
+      <script src="//www.parsecdn.com/js/parse-1.6.14.min.js"></script>
+      <script src="js/blog.js"></script>
   </body>
 </html>
